# gh-analyzer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: metrics.yml  scan.yml
src/gh_analyzer/: __init__.py  __main__.py  cli.py  github_api.py  github_client.py  github_repo_contents.py  iso_datetime.py  metrics.py  security_scanner.py
tests/: test_cli_metrics_json.py  test_cli_metrics_since.py  test_cli_scan.py  test_github_api.py  test_github_api_errors.py  test_github_repo_contents.py  test_metrics.py  test_security_scanner.py
