[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-analyzer"
version = "0.1.0"
description = "Minimal GitHub analyzer CLI scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gh-analyzer = "gh_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
